<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@drawable/rate_rounded_rectangle">

        <TextView
            android:id="@+id/dialog_rating_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/app_rating"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            />

        <TextView
            android:id="@+id/dialog_rating_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_rating_sum"
            android:layout_below="@id/dialog_rating_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:paddingBottom="5dp"
            android:gravity="center" />

        <RatingBar
            android:id="@+id/dialog_rating_rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_below="@id/dialog_rating_title"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:id="@+id/dialog_rating_feedback_title"
            android:text="@string/feedback"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/dialog_rating_feedback"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/dialog_rating_feedback_title"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rate_edittext_background"
            android:gravity="top|left"
            android:inputType="textMultiLine|textCapSentences"
            android:textSize="14dp"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textColorHint="#BDBDBD"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/dialog_rating_feedback_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_rating_feedback"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/dialog_rating_button_feedback_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:text="@string/cancel"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="15dp" />

            <TextView
                android:id="@+id/dialog_rating_button_feedback_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:text="@string/send"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:padding="15dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialog_rating_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_rating_rating_bar"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_rating_button_positive"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:textColor="@color/colorAccent"
                android:gravity="center"
                android:text="@string/rating_dialog_maybe_later"
                />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
