<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F6F7"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.agooday.screentime.cusview.InterceptRelativeLayout
            android:id="@+id/rela_intercept_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true">
                <ImageView
                    android:id="@+id/img_1"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/circle_red"
                    android:layout_marginLeft="5dp"
                    />
                <ImageView
                    android:id="@+id/img_2"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/circle_red"
                    android:tint="@color/iap_indicator_inactive"
                    android:layout_marginLeft="5dp"
                    />
                <ImageView
                    android:id="@+id/img_3"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:src="@drawable/circle_red"
                    android:tint="@color/iap_indicator_inactive"
                    android:layout_marginLeft="5dp"
                    />

            </LinearLayout>
        </com.agooday.screentime.cusview.InterceptRelativeLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:background="#6C7D8A"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_content_prive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="24dp"
                android:background="@android:color/holo_orange_dark">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@android:color/holo_orange_dark"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_3_days_free"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/btn_buy_subscription_free_trial"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:background="@drawable/selector_btn_buy_remove_ad"
                    android:gravity="center"
                    android:text="@string/start"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="24dp"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="#8995A1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_3_months"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_price_subscription_months"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:gravity="left"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:textSize="16sp"
                        tools:text="100k" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_buy_subscription_months"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:background="@drawable/selector_btn_buy_remove_ad_white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/buy"
                        android:textAllCaps="true"
                        android:textSize="16sp" />
                </LinearLayout>


            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="#8995A1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_1_year"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_price_subscription_yearly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textAllCaps="true"
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text="200k" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_buy_subscription_year"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:background="@drawable/selector_btn_buy_remove_ad_white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/buy"
                        android:textAllCaps="true"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_save_sub_second"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:textAllCaps="true"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="14dp"
                        tools:text="Save 50%" />
                </LinearLayout>

            </FrameLayout>


            <LinearLayout
                android:id="@+id/btn_restore_purchase"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="#6C7D8A"
                android:gravity="center"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/iv_auto_restore_purchase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/white"
                    android:src="@drawable/ic_baseline_cached_24px" />

                <TextView
                    android:id="@+id/tv_restore_pro_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:gravity="center"
                    android:text="@string/restore_purchases"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress_loading_price"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>


</LinearLayout>